# whtree/modules/platform/openapi/api/whfs.ts
@@ -3,6 +3,7 @@ import type { AuthorizedWRDAPIUser, HTTPSuccessCode, OpenAPIResponse, OpenAPIRes
 import { getAuthorizationInterface } from "@webhare/auth";
 import { listInstances, openFileOrFolder, whfsType, type WHFSFile, type WHFSObject } from "@webhare/whfs";
 import type { FileTypeInfo } from "@webhare/whfs/src/contenttypes";
+import { runInWork } from "@webhare/whdb";
 
 class WHFSAPIError extends Error {
   constructor(message: string, public statusCode: 400 | 403 | 404) {
@@ -30,6 +31,7 @@ async function getInstances(obj: WHFSObject) {
         description: obj.description,
         ...obj.isFile ? { keywords: (obj as WHFSFile).keywords } : {},
         ...obj.isFile && (typeinfo as FileTypeInfo).hasData ? { data: (obj as WHFSFile).data } : {},
+        ...obj.isFile && (typeinfo as FileTypeInfo).isPublishable ? { publish: (obj as WHFSFile).publish } : {},
       }
     }
   ];
@@ -59,15 +61,17 @@ export async function getWHFSObject(req: TypedRestRequest<AuthorizedWRDAPIUser, 
       modified: targetObj.modified.toString(),
       type: targetObj.type,
       ...(targetObj.isFolder ? { isFolder: true } : {}),
+      ...(targetObj.link ? { link: targetObj.link } : {})
     };
 
     if (targetObj.isFolder && req.params.children === true) {
-      reuslt.children = (await targetObj.list(["modified", "type"])).map(item => ({
+      reuslt.children = (await targetObj.list(["modified", "type", "link"])).map(item => ({
         name: item.name,
         whfsPath: targetObj.whfsPath + item.name + (item.isFolder ? "/" : ""),
         modified: item.modified.toString(),
         type: item.type,
-        ...item.isFolder ? { isFolder: true } : {}
+        ...item.isFolder ? { isFolder: true } : {},
+        ...(item.link ? { link: item.link } : {})
       }));
     }
     if (req.params.instances) {
@@ -78,6 +82,76 @@ export async function getWHFSObject(req: TypedRestRequest<AuthorizedWRDAPIUser, 
     }
 
     return req.createJSONResponse(200, reuslt);
+  } catch (e) {
+    if (e instanceof WHFSAPIError) {
+      return req.createErrorResponse(e.statusCode, { error: e.message });
+    }
+    throw e;
+  }
+}
+
+function mapVirtualMetaData(data: Record<string, unknown>): {
+  title?: string;
+  publish?: boolean;
+  type?: string;
+} | null {
+
+  const retval: ReturnType<typeof mapVirtualMetaData> = {};
+  if ("title" in data && typeof data.title === "string")
+    retval.title = data.title;
+  if ("publish" in data && typeof data.publish === "boolean")
+    retval.publish = data.publish;
+  if ("type" in data && typeof data.type === "string")
+    retval.type = data.type;
+  return Object.keys(retval).length > 0 ? retval : null;
+}
+
+async function applyInstanceUpdats(obj: WHFSObject, instances: TypedRestRequest<AuthorizedWRDAPIUser, "post /whfs/object">["body"]["instances"]) {
+  for (const instance of instances || []) {
+    if (instance.whfsType === "platform:virtual.objectdata")
+      continue;
+    const typeHandler = whfsType(instance.whfsType);
+    await typeHandler.set(obj.id, instance.data as object || {});
+  }
+}
+
+export async function createWHFSObject(req: TypedRestRequest<AuthorizedWRDAPIUser, "post /whfs/object">): Promise<OpenAPIResponse> {
+  try {
+    const parentFolder = await resolvePath(req);
+    if (!parentFolder.isFolder) {
+      return req.createErrorResponse(400, { error: `Cannot create object inside a file: ${parentFolder.whfsPath}` });
+    }
+
+    return await runInWork(async () => {
+      const virtualMetadata = req.body.instances?.find(_ => _.whfsType === "platform:virtual.objectdata")?.data;
+      const newObj = await parentFolder[req.body.isFolder ? "createFolder" : "createFile"](req.body.name, {
+        type: req.body.type,
+        ...virtualMetadata && mapVirtualMetaData(virtualMetadata) || {}
+      });
+      await applyInstanceUpdats(newObj, req.body.instances);
+      return req.createJSONResponse(201, {});
+    });
+  } catch (e) {
+    if (e instanceof WHFSAPIError) {
+      return req.createErrorResponse(e.statusCode, { error: e.message });
+    }
+    throw e;
+  }
+}
+
+export async function updateWHFSObject(req: TypedRestRequest<AuthorizedWRDAPIUser, "patch /whfs/object">): Promise<OpenAPIResponse> {
+  try {
+    const targetObject = await resolvePath(req);
+    return await runInWork(async () => {
+      const virtualMetadata = req.body.instances?.find(_ => _.whfsType === "platform:virtual.objectdata")?.data;
+      if (virtualMetadata) {
+        const updates = mapVirtualMetaData(virtualMetadata);
+        if (updates) { //TODO how about instance only updates ... they should update lastmod time too?
+          await targetObject.update(updates);
+        }
+      }
+      return req.createJSONResponse(200, {});
+    });
   } catch (e) {
     if (e instanceof WHFSAPIError) {
       return req.createErrorResponse(e.statusCode, { error: e.message });
